Add layout section gallery

--- a/index.html
+++ b/index.html
@@ -161,6 +161,86 @@
             <img src="assets/images/made_the_hard_way.png" alt="Made the hard way">
         </div>
     </section>
+    <section class="gallery_section">
+        <div>
+            <h2>Make Work Meaningful</h2>
+            <div>We're here because we believe that your work deserves the best. A team that loves working together is the magic that makes it all happen.</div>
+        </div>
+        <div class="gallery_images">
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_001.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_002.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_003.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_004.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_005.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_006.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_007.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_008.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_009.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_010.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_011.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_012.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_013.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_014.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_015.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_016.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_017.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_018.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_019.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_020.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_021.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_022.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_023.png" alt="photo">
+            </div>
+            <div>
+                <img src="assets/images/people_gallery/gallery_people_024.png" alt="photo">
+            </div>
+        </div>
+    </section>
 </main>
 <footer>
 </footer>
