Added styles for the gallery section

--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@
             <img src="assets/images/made_the_hard_way.png" alt="Made the hard way">
         </div>
     </section>
+    <!-- GALLERY SECTION -->
     <section class="gallery_section">
-        <div>
+        <div class="description_section_gallery">
             <h2>Make Work Meaningful</h2>
-            <div>We're here because we believe that your work deserves the best. A team that loves working together is the magic that makes it all happen.</div>
+            <div class="bigText">We're here because we believe that your work deserves the best. A team that loves working together is the magic that makes it all happen.</div>
         </div>
         <div class="gallery_images">
             <div>
