Added layout for the invitation section

--- a/index.html
+++ b/index.html
@@ -242,6 +242,11 @@
             </div>
         </div>
     </section>
+    <!-- INVITATION SECTION -->
+    <section class="invitation_section">
+        <h2>We Hope You'll Join Us</h2>
+        <a href="#" class="link">READ MORE ABOUT OUR STORY</a>
+    </section>
 </main>
 <footer>
 </footer>
