Added layout for gesign inspiration section

--- a/index.html
+++ b/index.html
@@ -247,6 +247,18 @@
         <h2>We Hope You'll Join Us</h2>
         <a href="#" class="link">READ MORE ABOUT OUR STORY</a>
     </section>
+    <!-- SECTION ABOUT DESIGN INSPIRATION -->
+    <section class="gesign_inspiration_section">
+        <div>
+            <img src="assets/images/logo_design.png" alt="logo design">
+        </div>
+        <h2>
+            Design Inspires
+        </h2>
+        <div>
+            Build your dream workspace, so you can get your best work done.
+        </div>
+    </section>
 </main>
 <footer>
 </footer>
