--- a/index.html
+++ b/index.html
@@ -261,6 +261,30 @@
     </section>
 </main>
 <footer>
+    <div>
+        <nav class="nav_footer_left">
+            <a href="#">Shop</a>
+            <a href="#">About</a>
+            <a href="#">Journal</a>
+            <a href="#">Support</a>
+            <a href="#">COVID-19 Info</a>
+            <a href="#">Order Status</a>
+            <a href="#">Corporate Sales</a>
+        </nav>
+        <div>
+            <h2>Newsletter Signup</h2>
+            <div>Sign up to our Newsletter to hear about new product releases, learn about our design process, and everything else going on behind the scenes at Grovemade.</div>
+        </div>
+    </div>
+    <nav class="nav_footer_bottom">
+        <a href="#">©2020 Grovemade</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Site by Department</a>
+    </nav>
+    <div class="button_go_up">
+        GO<br/>UP
+    </div>
 </footer>
 </body>
 </html>
