Added styles for the footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--HEADER-->
-<header class="header">
+<header class="header" id="header">
     <nav>
         <a href="#">SHOP</a>
         <a href="#">EXPLORE</a>
@@ -260,9 +260,9 @@
         </div>
     </section>
 </main>
-<footer>
-    <div>
-        <nav class="nav_footer_left">
+<footer class="footer">
+    <div  class="nav_footer_left">
+        <nav>
             <a href="#">Shop</a>
             <a href="#">About</a>
             <a href="#">Journal</a>
@@ -273,17 +273,18 @@
         </nav>
         <div>
             <h2>Newsletter Signup</h2>
-            <div>Sign up to our Newsletter to hear about new product releases, learn about our design process, and everything else going on behind the scenes at Grovemade.</div>
+            <div class="bigText">Sign up to our Newsletter to hear about new product releases, learn about our design process, and everything else going on behind the scenes at Grovemade.</div>
+            <hr>
         </div>
     </div>
     <nav class="nav_footer_bottom">
-        <a href="#">©2020 Grovemade</a>
+        <a href="#">&copy;2020 Grovemade</a>
         <a href="#">Terms & Conditions</a>
         <a href="#">Privacy Policy</a>
         <a href="#">Site by Department</a>
     </nav>
     <div class="button_go_up">
-        GO<br/>UP
+        <a href="#header"> GO<br/>UP</a>
     </div>
 </footer>
 </body>
